# ruru

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLI.md  LICENSE  README.md  demo_cli.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: build.yml  ci.yml  release.yml
docs/: index.md
src/ruru/: __init__.py  cli.py  config.py
src/ruru/base/: __init__.py  match_arg.py  matching.py
src/ruru/cli/: __init__.py  cli.py  elements.py  styles.py  symbols.py  themes.py
src/scripts/demo/: demo_cli.py
tasks/: ABOUT_TASKS.md  release.ps1  run_sphinx_build.ps1  sync_template.ps1
tasks/scripts/: install_backend.sh  release.sh  release_utils.sh  run_build.sh  run_sphinx_build.sh  run_towncrier_build.sh  tag_release.sh
tasks/shims/: release  release.cmd  release.ps1  release_utils  release_utils.cmd  release_utils.ps1  run_build  run_build.cmd  run_build.ps1  run_sphinx_build  run_sphinx_build.cmd  run_sphinx_build.ps1  run_towncrier_build  run_towncrier_build.cmd  run_towncrier_build.ps1  tag_release  tag_release.cmd  tag_release.ps1
tests/: conftest.py
tests/ruru/: test_cli.py  test_config.py  test_nothing.py
tests/ruru/base/: test_match_arg.py  test_matching.py
tests/ruru/cli/: test_cli.py  test_elements.py  test_styles.py  test_symbols.py  test_themes.py
tests/ruru/config/: test_config.py
